# sara-thermal-reading

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  catalog-info.yaml  main.py  pyproject.toml  requirements.txt  utils_cli.py
.github/workflows/: compile_requirements.yml  deploy_to_development.yml  deploy_to_staging.yml  promote_to_production.yml  publish_component.yml  pythonpackage.yml  test_and_lint_python_package.yml  update_aurora_deployment.yml
example-data/: thermal_image.tiff
example-data/fireplace-example/: polygon.json  thermal_image.tiff
sandbox/: create_reference_images.py  create_reference_polygons.py  download_raw_data.py  example_thermal_reading.py  run_matching.py  upload_ref_to_storage_account.py
sara_thermal_reading/: cli_inputs.py  main.py  main_fff_workflow.py  main_thermal_workflow.py  main_workflow.py  plotting.py
sara_thermal_reading/config/: open_telemetry.py  settings.py
sara_thermal_reading/dev_utils/: alignment_comparison.py  benchmark_alignment.py  create_reference_polygon.py  image_warping.py  run_fff_workflow_local_files.py  run_thermal_workflow_local_files.py  synthetic_data.py
sara_thermal_reading/file_io/: blob.py  file_utils.py  tiff_loader.py
sara_thermal_reading/image_alignment/: __init__.py  base.py  (+3 more)
tests/: test_blob_storage_location.py  test_cli_inputs.py  test_convert_thermal_to_uint8.py  test_find_max_temperature_in_polygon_raw_thermal.py  test_find_temperature_in_polygon.py  test_image_alignment_strategies.py  test_np_image_to_jpg_bytes.py  test_thermal_reading.py  test_tiff_loader.py
(+6 files in other folders)
