[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sara-thermal-reading"
version = "0.1.0"
description = "Sara Thermal Reading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "Pillow",
    "numpy",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-storage-blob",
    "pydantic",
    "pydantic-settings",
    "pathlib",
    "opencv-python",
    "flirpy==0.3.0",
    "typer",
    "matplotlib",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "mpl-point-clicker"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort",
    "flake8",
    "types-requests", # For Mypy
    "pip-system-certs", # To use system certificates for MET API
    "pip-tools" # To use pip-compile from readme
]

[tool.setuptools.packages.find]
include = ["sara_thermal_reading*"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true
no_warn_return_any = true
warn_unused_ignores = false
strict_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
files = ["sara_thermal_reading", "utils_cli.py", "main.py"]

[tool.isort]
profile = "black"
